Backend-Verknüpfung - Finanzdashboard - Kostenverteilung